--- a/paper-rock-scissor/Pages/Index.razor
+++ b/paper-rock-scissor/Pages/Index.razor
@@ -4,8 +4,8 @@
 @while (runing==false)
 {
     <div class="MainMenu">
-        <button id="Play" name="Play">
-            <img src="" />
+        <button id="Play" name="Play" class="PlayButton">
+            <img src="paper-rock-scissor/Picture/R1.png"/>
         </button>
     </div>
 }
