--- a/paper-rock-scissor/Pages/Index.razor
+++ b/paper-rock-scissor/Pages/Index.razor
@@ -21,6 +21,17 @@
             <img class="OnlinePlayer"/>
             <p>@OnlinePlayerName</p>
         </div>
+        <div class="SelectBar">
+            <button name="Rock" id="Rock">
+                <img/>
+            </button>
+            <button name="Paper" id="Paper">
+                <img/>
+            </button>
+            <button name="Scissors" id="Scissors">
+                <img/>
+            </button>
+        </div>
         <div class="HostPlayer">
             <img class="StacticPlayer" />
             <p>@StacticPlayerName</p>
